# CAOS_PitForge

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-precompute.txt  requirements.txt
data-pipeline/pflab/: __init__.py  live.py  pipeline.py  registry.py
data-pipeline/pflab/cases/: pit_cases.py
data-pipeline/pflab/core/: gate.py  manifest.py  trace.py
data-pipeline/pflab/io/: contract.py  schema.py
data-pipeline/pflab/model/: __init__.py  learned.py
data-pipeline/pflab/science/: bake_cases.mjs  cpit.py  gen_train.mjs  train_pit.py
data-pipeline/pflab/stages/: evaluate.py  export.py  feature_extraction.py  infer.py  preprocess.py  train.py
data/derived/: case-results.json  cpit-schedule.json  grade-nn.onnx  minelib-results.json  pit-learned.json  pit-surrogate.onnx
data/derived/A01/: trace.json
data/derived/A02/: trace.json
data/derived/A03/: trace.json
data/derived/A04/: trace.json
data/derived/CTRL/: trace.json
data/derived/E01/: trace.json
data/derived/E02/: trace.json
data/derived/G01/: trace.json
data/derived/G02/: trace.json
data/examples/: blockmodel.csv  scenarios.csv
deploy/: pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  04_live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  08_data-contracts.md
docs/cases/: README.md
docs/frameworks/: 01_optimiser.md  02_viz.md  03_torch-onnx.md  04_scheduling.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: CNAME  minelib-results.json
frontend/scripts/: bake-minelib.mjs  fetch-minelib.mjs  gen-twins.py
frontend/src/: architecture.ts  main.tsx  pitforge.css
frontend/test/: contract-live.test.ts  contract.test.ts  infill.test.ts  minelib.test.ts  opt.test.ts  realcases.test.ts  schedule.test.ts
scripts/: gen_cpit.py  precompute.ps1  precompute.sh
tests/: conftest.py  test_contract.py  test_cpit.py  test_manifest.py  test_pipeline_smoke.py
(+69 files in other folders)
